<resources>
    <string name="app_name">Shopy</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="my_cart">My Cart</string>
    <string name="add_more_to_cart">Add more products to your cart!</string>
    <string name="enter_code_voucher">Enter code voucher</string>
    <string name="apply">Apply</string>
    <string name="in_total">In Total</string>
    <string name="_288_00">$288.00</string>
    <string name="checkout">Checkout</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="name">Name</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="or_sign_up_with">Or sign up with</string>
    <string name="nike_react_miler">Nike React Miler</string>
    <string name="minus">minus</string>
    <string name="_1">1</string>
    <string name="add">add</string>
    <string name="item">item</string>
    <string name="luka_marjanovic">Luka Marjanovic</string>
    <string name="_221b_baker_st_marylebone_london_united_kingdom">221b Baker St, Marylebone London, United Kingdom</string>
    <string name="edit_address">Edit Address</string>
    <string name="malv_gmail_com">*******malv@gmail.com</string>
    <string name="place_order">Place order</string>
    <string name="my_account">My account</string>
    <string name="account_details">Account details</string>
    <string name="language">Language</string>
    <string name="english">English</string>
    <string name="arabic">Arabic</string>
    <string name="logout">Logout</string>
    <string name="address">Address</string>
    <string name="country">Region</string>
    <string name="ex_egypt">ex.EGYPT</string>
    <string name="city">City</string>
    <string name="additional_information">Additional Information</string>
    <string name="phone_number">Phone number</string>
    <string name="save">Save</string>
    <string name="save_location">Save location</string>
    <string name="orders">Orders</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="please_fill_e_mail_password_to_login_your_shopy_application_account"><![CDATA[Please fill E-mail & password to login your Shopy application account.]]></string>
    <string name="forgot_password">Forgot password?</string>
    <string name="or_sign_in_with">Or sign in with</string>
    <string name="don_t_have_an_account">Don’t have an account?</string>
    <string name="continue_as_a">Continue as a</string>
    <string name="guest">Guest</string>
    <string name="size">Size:</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="my_wishlist">My wishlist</string>
    <string name="forget_password">Forget Password</string>
    <string name="reset_password">Reset Password</string>
    <string name="the_recovery_link_will_be_sent_to_your_email_please_enter_your_email">The recovery link will be sent to your email. Please enter your email:</string>
    <string name="home">Home</string>
    <string name="wish_list">Wish List</string>
    <string name="cart">Cart</string>
    <string name="profile">Profile</string>
    <string name="recover_password">Recover Password</string>
    <string name="shoes">SHOES</string>
    <string name="t_shirts">T-SHIRTS</string>
    <string name="accessories">ACCESSORIES</string>
    <string name="remove_filter">Remove Filter</string>
    <string name="registration_successful_please_check_your_email_to_verify_your_account">Registration successful. Please check your email to verify your account.</string>
    <string name="registration_failed_please_check_your_email_and_password">Registration failed. Please check your email and password.</string>
    <string name="registration_failed_please_check_your_data">Registration failed. Please check your data.</string>
    <string name="invalid_data_please_fill_in_all_the_fields">Invalid data. Please fill in all the fields.</string>
    <string name="no_internet_connection_please_check_your_network_settings">No internet connection. Please check your network settings.</string>
    <string name="google_verification_failed_please_try_again">Google verification failed. Please try again.</string>
    <string name="welcome">Welcome</string>
    <string name="login_failed_please_check_your_email_and_password">Login failed. Please check your email and password.</string>
    <string name="please_check_your_email_to_verify_your_account">Please check your email to verify your account.</string>
    <string name="address_book">Address book</string>
    <string name="add_new_address">ADD NEW ADDRESS</string>
    <string name="giza">Giza</string>
    <string name="default_address">Default Address</string>
    <string name="set_as_default">SET AS DEFAULT</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="egypt">EGYPT</string>
    <string name="saved_for_later">Saved for later.</string>
    <string name="description">Description</string>
    <string name="reviews">Reviews</string>
    <string name="variants">Variants:</string>
    <string name="please_select_a_size_to_progress">Please select a size to progress</string>
    <string name="error_loading_product_data">Error loading product data</string>
    <string name="item_added_to_cart">Item added to cart</string>
    <string name="zip_code">Zip Code</string>
    <string name="filter">Filter</string>
    <string name="currency">Currency</string>
    <string name="usd">USD</string>
    <string name="egp">EGP</string>
    <string name="setting">Setting</string>
    <string name="search">Search</string>
    <string name="search_bar_hint">Search \"Adidas\"</string>
    <string name="search_product_title_brand">Search product title, brand</string>
    <string name="error_loading_data_please_try_again_later">Error loading data, please try again later</string>
    <string name="out_of_stock">Product is out of stock</string>
    <string name="please_log_in_to_add_items_to_your_cart">Please log in to add items to your cart.</string>
    <string name="please_log_in_to_add_items_to_your_wishlist">Please log in to add items to your wishlist.</string>
    <string name="failed_to_add_product_to_cart">Failed to add product to cart.</string>
    <string name="item_already_exist_in_cart">Item already exist in cart</string>
    <string name="product_added_to_wishlist">Product added to wishlist.</string>
    <string name="product_removed_from_wishlist">Product removed from wishlist.</string>
    <string name="failed_to_add_product_to_wishlist">Failed to add product to wishlist.</string>
    <string name="error_adding_product_to_wishlist">Error adding product to wishlist</string>
    <string name="price">Price</string>
    <string name="type">Type</string>
    <string name="from">from</string>
    <string name="to">to</string>
    <string name="discover_a_world">Discover a World</string>
    <string name="of_shopping_amp_lifestyle"><![CDATA[Of Shopping & LifeStyle]]></string>
    <string name="with_shopy">With Shopy</string>
    <string name="let_s_start">Let\'s Start</string>
    <string name="your_journey">Your Journey</string>
    <string name="women">Women</string>
    <string name="men">Men</string>
    <string name="kids">Kids</string>
    <string name="sale">Sale</string>
    <string name="brands">Brands</string>
    <string name="order_id">Order id :</string>
    <string name="order_date">Order Date :</string>
    <string name="total_price">Total Price :</string>
    <string name="shopy_is_the">Shopy Is The</string>
    <string name="best_shopping_app">Best Shopping App</string>
    <string name="in_2023">In 2023</string>
    <string name="git_your">Git your</string>
    <string name="special_offers">Special Offers</string>
    <string name="every_day">Every Day</string>
    <string name="cash_on_delivery">Cash On Delivery</string>
    <string name="paypal">Paypal</string>
    <string name="order_success">Order success!</string>
    <string name="continue_shopping">Continue shopping</string>
    <string name="choose_address">Choose Address</string>
    <string name="changing_the_language">Changing The Language</string>
    <string name="may_cause_app_restart">May Cause App Restart</string>
    <string name="ok">OK</string>
    <string name="couldn_t_retrieve_data">Couldn\'t retrieve data</string>
    <string name="failed_to_retrieve_data">Failed to retrieve data.</string>
    <string name="product_removed_from_cart">Product removed from cart.</string>
    <string name="coupon_copied_to_clipboard">Coupon copied to clipboard</string>
</resources>