<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="30dp"
    android:layout_marginTop="35dp"
    android:layout_marginBottom="10dp"
    tools:context=".profile.view.AddAddressFragment">

    <ImageButton
        android:id="@+id/btn_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@android:color/transparent"
        android:src="@drawable/back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/tv_title" />

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:clickable="true"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/add_new_address"
        android:textColor="@color/text_color"
        android:textSize="20sp"
        android:layout_marginStart="10dp"
        app:layout_constraintStart_toEndOf="@id/btn_back"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <ImageButton
        android:id="@+id/btn_map"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:background="@android:color/transparent"
        android:src="@drawable/map"
        app:layout_constraintBottom_toBottomOf="@id/tv_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/tv_title" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/et_first_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/views_rounded_background"
        android:fontFamily="@font/montserrat_semi_bold"
        android:hint="@string/first_name"
        android:inputType="text"
        android:maxLength="15"
        android:maxLines="1"
        android:minHeight="50dp"
        android:paddingHorizontal="30dp"
        android:textColor="@color/text_color"
        android:textSize="17sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/et_last_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/views_rounded_background"
        android:fontFamily="@font/montserrat_semi_bold"
        android:hint="@string/last_name"
        android:inputType="text"
        android:maxLength="15"
        android:maxLines="1"
        android:minHeight="50dp"
        android:paddingHorizontal="30dp"
        android:textColor="@color/text_color"
        android:textSize="17sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_first_name" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/et_region"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/views_rounded_background"
        android:fontFamily="@font/montserrat_semi_bold"
        android:hint="@string/country"
        android:inputType="text"
        android:text="@string/egypt"
        android:maxLength="15"
        android:maxLines="1"
        android:minHeight="50dp"
        android:paddingHorizontal="30dp"
        android:textColor="@color/text_color"
        android:textSize="17sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_last_name" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/et_city"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/views_rounded_background"
        android:fontFamily="@font/montserrat_semi_bold"
        android:hint="@string/city"
        android:inputType="text"
        android:maxLength="30"
        android:maxLines="1"
        android:minHeight="50dp"
        android:paddingHorizontal="30dp"
        android:textColor="@color/text_color"
        android:textSize="17sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_region" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/et_zip_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/views_rounded_background"
        android:fontFamily="@font/montserrat_semi_bold"
        android:hint="@string/zip_code"
        android:inputType="text"
        android:maxLength="15"
        android:maxLines="1"
        android:minHeight="50dp"
        android:paddingHorizontal="30dp"
        android:textColor="@color/text_color"
        android:textSize="17sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_city" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/et_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/views_rounded_background"
        android:fontFamily="@font/montserrat_semi_bold"
        android:hint="@string/address"
        android:inputType="text"
        android:maxLines="2"
        android:minHeight="70dp"
        android:paddingHorizontal="30dp"
        android:textColor="@color/text_color"
        android:textSize="17sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_zip_code" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/et_additional_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/views_rounded_background"
        android:fontFamily="@font/montserrat_semi_bold"
        android:hint="@string/additional_information"
        android:inputType="text"
        android:maxLines="3"
        android:minHeight="70dp"
        android:paddingHorizontal="30dp"
        android:textColor="@color/text_color"
        android:textSize="17sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_address" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/et_phone_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/views_rounded_background"
        android:fontFamily="@font/montserrat_semi_bold"
        android:hint="@string/phone_number"
        android:inputType="number"
        android:maxLength="11"
        android:maxLines="1"
        android:minHeight="50dp"
        android:paddingHorizontal="30dp"
        android:textColor="@color/text_color"
        android:textSize="17sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_additional_info" />

    <Button
        android:id="@+id/btn_save"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/btn_ripple_transparent"
        android:fontFamily="@font/montserrat_semi_bold"
        android:text="@string/save"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_phone_number"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>