<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/grey"
    app:cardElevation="6dp"
    app:cardCornerRadius="20dp">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent">


        <TextView
            android:id="@+id/textView29"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/price"
            android:textColor="@color/text_color"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="@+id/textView27"
            app:layout_constraintTop_toBottomOf="@+id/cv_rg" />

        <TextView
            android:id="@+id/textView26"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/filter"
            android:textColor="@color/blue"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/cv_rg"
            app:layout_constraintStart_toStartOf="@+id/cv_rg"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_rg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:backgroundTint="@color/light_grey"
            app:cardBackgroundColor="@color/light_grey"
            app:cardCornerRadius="18dp"
            app:cardElevation="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/textView27"
            app:layout_constraintTop_toBottomOf="@+id/textView27">

            <RadioGroup
                android:id="@+id/rg_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rbtn_shoes"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="5dp"
                    android:text="@string/shoes"
                    android:textStyle="bold" />

                <RadioButton
                    android:id="@+id/rbtn_shirt"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="5dp"
                    android:text="@string/t_shirts"
                    android:textStyle="bold" />

                <RadioButton
                    android:id="@+id/rbtn_accessories"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="5dp"
                    android:text="@string/accessories"
                    android:textStyle="bold" />
            </RadioGroup>
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/textView27"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/type"
            android:textColor="@color/text_color"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView26" />

        <TextView
            android:id="@+id/textView30"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/from"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/et_from_price"
            app:layout_constraintStart_toStartOf="@+id/textView29"
            app:layout_constraintTop_toTopOf="@+id/et_from_price" />

        <TextView
            android:id="@+id/textView31"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/to"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/textView30"
            app:layout_constraintEnd_toStartOf="@+id/et_to_price"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/et_from_price"
            app:layout_constraintTop_toTopOf="@+id/textView30"
            app:layout_constraintVertical_bias="0.0" />

        <EditText
            android:id="@+id/et_from_price"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/views_rounded_background"
            android:elevation="6dp"
            android:inputType="numberDecimal"
            android:paddingHorizontal="4dp"
            android:textSize="17sp"
            tools:hint="125.0"
            android:gravity="center"
            app:layout_constraintEnd_toStartOf="@+id/textView31"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/textView30"
            app:layout_constraintTop_toBottomOf="@+id/textView29" />


        <EditText
            android:id="@+id/et_to_price"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/views_rounded_background"
            android:elevation="6dp"
            android:inputType="numberDecimal"
            android:paddingHorizontal="4dp"
            android:textSize="17sp"
            tools:hint="125.0"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="@+id/textView31"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/textView31"
            app:layout_constraintTop_toTopOf="@+id/textView31"
            app:layout_constraintVertical_bias="0.521" />

        <Button
            android:id="@+id/btn_save_filter"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:elevation="6dp"
            android:text="@string/save"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView31" />

        <Button
            android:id="@+id/btn_remove_filter"
            style="@style/Widget.Material3.Button.TextButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="16dp"
            android:text="@string/remove_filter"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/btn_save_filter"
            app:layout_constraintStart_toStartOf="@+id/btn_save_filter"
            app:layout_constraintTop_toBottomOf="@+id/btn_save_filter" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>